--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <body>
     <h1>Jack Shanafelt</h1>
-    <p>I am Jack Shanafelt, a GIMM Major</p>
+    <p>I am Jack Shanafelt, a GIMM Major. The purpose of this website is to act as a portfolio to demonstrate my previous works</p>
+    <hr>
 </body>
 
 </html>
