--- a/artifacts.html
+++ b/artifacts.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <link rel="stylesheet" href="style.css">
@@ -10,7 +9,6 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -21,28 +19,21 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="artifacts.html">Artifacts</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="content">
-    <h1>Jack Shanafelt</h1>
-    <hr>
-    <div class="container">
-        <img src="Images\IMG_2130.jpg" class="img-fluid" id="Self">
-        <p>I am Jack Shanafelt, a GIMM Major, Aspiring game developer and website developer. The purpose of this website is to act as a portfolio to demonstrate my
-            previous works. I was born in Boise, Idaho, raised in washington for most of my life. But for the last few years before I enrolled in BSU I was travelling the world while living on a boat</p>
-    </div>
-    <hr>
-    
-    </div>
-    <div class="footer">
-        <a href="https://www.linkedin.com/in/jack-shanafelt-772125276/" target="_blank">linkedin</a>
-        <a href="mailto:shanafeltj1@gmail.com">Email me</a>
-    </div>
-
+<div class="container">
+    <img src="Images\Screenshot (57).png" class="img-fluid" alt="" id="MobileWeb">
+    <p>This is from a project I've previously worked on for one of my classes. The goal for this project was to chose a topic and compile sufficent data so that I could make a table and a set of graphs to demonstrate it. I made the website responsive so that people could have an easier time
+        viewing it on their mobile devices. 
+    </p>
+</div>
+<div class="container">
+    <img src="Images\Screenshot (84).png" class="img-fluid" alt="" id="Wheel">
+    <p>This is a 3D model that I made for a Virtual reality project that I have been working on.</p>
+</div>
 </body>
-
 </html>
