--- a/artifacts.html
+++ b/artifacts.html
@@ -10,7 +10,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="artifacts">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Jack Shanafelt</a>
@@ -35,6 +35,10 @@
 <div class="container">
     <img src="Images\Screenshot (84).png" class="img-fluid" alt="" id="Wheel">
     <p>This is a 3D model that I made for a Virtual reality project that I have been working on.</p>
+</div>
+<div class="footer">
+    <a href="https://www.linkedin.com/in/jack-shanafelt-772125276/" target="_blank">linkedin</a>
+    <a href="mailto:shanafeltj1@gmail.com">Email me</a>
 </div>
 </body>
 </html>
