--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -11,11 +16,12 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body id="home">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Jack Shanafelt</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -28,15 +34,17 @@
         </div>
     </nav>
     <div class="content">
-    <h1>Jack Shanafelt</h1>
-    <hr>
-    <div class="container">
-        <img src="Images\IMG_2130.jpg" class="img-fluid" id="Self">
-        <p>I am Jack Shanafelt, a GIMM Major, Aspiring game developer and website developer. The purpose of this website is to act as a portfolio to demonstrate my
-            previous works. I was born in Boise, Idaho, raised in washington for most of my life. But for the last few years before I enrolled in BSU I was travelling the world while living on a boat</p>
-    </div>
-    <hr>
-    
+        <h1>Jack Shanafelt</h1>
+        <hr>
+        <div class="container">
+            <img src="Images\IMG_2130.jpg" class="img-fluid" id="Self">
+            <p>I am Jack Shanafelt, a GIMM Major, Aspiring game developer and website developer. The purpose of this
+                website is to act as a portfolio to demonstrate my
+                previous works. I was born in Boise, Idaho, raised in washington for most of my life. But for the last
+                few years before I enrolled in BSU I was travelling the world while living on a boat.</p>
+        </div>
+        <hr>
+
     </div>
     <div class="footer">
         <a href="https://www.linkedin.com/in/jack-shanafelt-772125276/" target="_blank">linkedin</a>
