--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 website is to act as a portfolio to demonstrate my
                 previous works. I was born in Boise, Idaho, raised in washington for most of my life. But for the last
                 few years before I enrolled in BSU I was travelling the world while living on a boat.</p>
+                <h1>Skills</h1>
+                <p>HTML, CSS, JavaScript, C#, Unity, Maya, Photoshop, Premier Pro, Arduino IDE, Python, D3js, and more.</p>
         </div>
         <hr>
 
