--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 few years before I enrolled in BSU I was travelling the world while living on a boat.</p>
                 <h1>Skills</h1>
                 <p>HTML, CSS, JavaScript, C#, Unity, Maya, Photoshop, Premier Pro, Arduino IDE, Python, D3js, and more.</p>
+                <h1>Education</h1>
+                <p>Boise State University, current student in Games, Interactive Media, and Mobile Technology, associate's degree from Tacoma Community College</p>
         </div>
         <hr>
 
