--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="en">
 <html>
 
 <head>
@@ -14,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <title>Jack Shanafelt's portfolio</title>
 </head>
 
 <body id="home">
@@ -37,7 +39,7 @@
         <h1>Jack Shanafelt</h1>
         <hr>
         <div class="container">
-            <img src="Images\IMG_2130.jpg" class="img-fluid" id="Self">
+            <img src="Images\IMG_2130.jpg" class="img-fluid" id="Self" alt="Self Photo">
             <p>I am Jack Shanafelt, a GIMM Major, Aspiring game developer and website developer. The purpose of this
                 website is to act as a portfolio to demonstrate my
                 previous works. I was born in Boise, Idaho, raised in washington for most of my life. But for the last
