--- a/artifacts.html
+++ b/artifacts.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="en">
 <html>
 <head>
     
@@ -9,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <title>Jack Shanafelt's Artifacts</title>
 </head>
 <body id="artifacts">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,13 +29,13 @@
         </div>
     </nav>
 <div class="container">
-    <img src="Images\Screenshot (57).png" class="img-fluid" alt="" id="MobileWeb">
+    <img src="Images\Screenshot (57).png" class="img-fluid" alt="Website Screenshot" id="MobileWeb">
     <p>This is from a project I've previously worked on for one of my classes. The goal for this project was to chose a topic and compile sufficent data so that I could make a table and a set of graphs to demonstrate it. I made the website responsive so that people could have an easier time
         viewing it on their mobile devices. 
     </p>
 </div>
 <div class="container">
-    <img src="Images\Screenshot (84).png" class="img-fluid" alt="" id="Wheel">
+    <img src="Images\Screenshot (84).png" class="img-fluid" alt="3D Modled Wheel" id="Wheel">
     <p>This is a 3D model that I made for a Virtual reality project that I have been working on.</p>
 </div>
 <div class="footer">
