added resume page and new artifacts

--- a/artifacts.html
+++ b/artifacts.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Resume.html">My Resume</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -44,6 +47,9 @@
 <div class="container">
     <img src="Images\Screenshot (84).png" class="img-fluid" alt="3D Modled Wheel" id="Wheel">
     <p>This is a 3D model that I made for a Virtual reality project that I have been working on.</p>
+</div>
+<div class="container">
+    <iframe frameborder="0" src="https://itch.io/embed-upload/7862449?color=000000" allowfullscreen="" width="500" height="320"><a href="https://ciemnywilk.itch.io/the-allegory-of-superposition">Play The Allegory Of Superposition Prototype on itch.io</a></iframe>
 </div>
 <div class="footer">
     <a href="https://www.linkedin.com/in/jack-shanafelt-772125276/" target="_blank">linkedin</a>
