--- a/Resume.html
+++ b/Resume.html
@@ -4,9 +4,6 @@
 
 <head>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -19,10 +16,7 @@
     <noscript>
         <link rel="stylesheet" href="style.css">
     </noscript>
-    <title>Jack Shanafelt's portfolio</title>
-</head>
-
-<body id="home">
+    <title>Jack Shanafelt's Resume</title>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Jack Shanafelt</a>
@@ -36,34 +30,12 @@
                         <a class="nav-link" href="artifacts.html">Artifacts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Resume.html">My Resume</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="content">
-        <h1>Jack Shanafelt</h1>
-        <hr>
-        <div class="container">
-            <img src="Images\IMG_2130.jpg" class="img-fluid" id="Self" alt="Self Photo">
-            <p>I am Jack Shanafelt, a GIMM Major, Aspiring game developer and website developer. The purpose of this
-                website is to act as a portfolio to demonstrate my
-                previous works. I was born in Boise, Idaho, raised in washington for most of my life. But for the last
-                few years before I enrolled in BSU I was travelling the world while living on a boat.</p>
-                <h1>Skills</h1>
-                <p>HTML, CSS, JavaScript, C#, Unity, Maya, Photoshop, Premier Pro, Arduino IDE, Python, D3js, and more.</p>
-                <h1>Education</h1>
-                <p>Boise State University, current student in Games, Interactive Media, and Mobile Technology, associate's degree from Tacoma Community College</p>
-        </div>
-        <hr>
-
-    </div>
-    <div class="footer">
-        <a href="https://www.linkedin.com/in/jack-shanafelt-772125276/" target="_blank">linkedin</a>
-        <a href="mailto:shanafeltj1@gmail.com">Email me</a>
-    </div>
-
-</body>
-
+    <embed src="Jack_Shanafelt_Resume (2).pdf" type="application/pdf" width="100%" height="1080px" />
+</head>
 </html>
