--- a/Resume.html
+++ b/Resume.html
@@ -1,41 +1,204 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<html>
-
 <head>
-    <meta name='viewport' content='width=device-width, initial-scale=1' />
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'">
-    <noscript>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    </noscript>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" as="script" onload="this.rel='preload'"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script>
-    <link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
-    <noscript>
-        <link rel="stylesheet" href="style.css">
-    </noscript>
-    <title>Jack Shanafelt's Resume</title>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Jack Shanafelt</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jack Shanafelt - Resume</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="resume-style.css" rel="stylesheet">
+</head>
+<body>
+    <!-- Navbar (same as main page) -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Jack Shanafelt</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="artifacts.html">Artifacts</a>
+                        <a class="nav-link" href="index.html#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="resume.html">Resume</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <embed src="Jack_Shanafelt_Resume (2).pdf" type="application/pdf" width="100%" height="1080px" />
-</head>
+
+    <!-- Resume Header -->
+    <header class="resume-header">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-8">
+                    <h1>Jack Shanafelt</h1>
+                    <div class="contact-info">
+                        <span><i class="fas fa-phone"></i> 253-509-3785</span>
+                        <span><i class="fas fa-envelope"></i> shanafeltjack@gmail.com</span>
+                        <span><i class="fas fa-globe"></i> Portfolio Website</span>
+                    </div>
+                </div>
+                <div class="col-lg-4 text-lg-end">
+                    <a href="Jack_Shanafelt_Resume.pdf" class="btn btn-primary" download>
+                        <i class="fas fa-download"></i> Download PDF
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Resume Content -->
+    <section class="resume-content">
+        <div class="container">
+            <!-- Projects Section -->
+            <div class="resume-section">
+                <h2><i class="fas fa-code-branch"></i> Projects</h2>
+                <div class="resume-item">
+                    <h3>The Allegory Of Superposition</h3>
+                    <p class="project-description">A Unity-based platformer game exploring quantum superposition concepts through innovative gameplay mechanics.</p>
+                    <ul class="achievement-list">
+                        <li>Developed complete game mechanics and player interactions</li>
+                        <li>Implemented quantum physics concepts in an accessible format</li>
+                        <li>Created engaging level design and progression system</li>
+                    </ul>
+                    <div class="tech-stack">
+                        <span class="tech-tag">Unity</span>
+                        <span class="tech-tag">C#</span>
+                        <span class="tech-tag">Game Design</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Experience Section -->
+            <div class="resume-section">
+                <h2><i class="fas fa-briefcase"></i> Experience</h2>
+                
+                <div class="resume-item">
+                    <div class="job-header">
+                        <h3>Customer Service Specialist</h3>
+                        <span class="company">Happy Teriyaki</span>
+                        <span class="duration">August 2023 - March 2024</span>
+                        <span class="location">Boise, Idaho</span>
+                    </div>
+                    <ul class="responsibility-list">
+                        <li>Managed food service operations and customer interactions</li>
+                        <li>Handled order processing and payment transactions</li>
+                        <li>Maintained cleanliness and safety standards</li>
+                    </ul>
+                </div>
+
+                <div class="resume-item">
+                    <div class="job-header">
+                        <h3>Arena Food Server</h3>
+                        <span class="company">Idaho Centre Arena</span>
+                        <span class="duration">September 2022 - April 2023</span>
+                        <span class="location">Boise, Idaho</span>
+                    </div>
+                    <ul class="responsibility-list">
+                        <li>Delivered food orders efficiently during high-volume events</li>
+                        <li>Collaborated with team members to ensure timely service</li>
+                        <li>Maintained professional conduct in fast-paced environment</li>
+                    </ul>
+                </div>
+
+                <div class="resume-item">
+                    <div class="job-header">
+                        <h3>Facility Caretaker</h3>
+                        <span class="company">U-Haul</span>
+                        <span class="duration">June 2022 - August 2022</span>
+                        <span class="location">Boise, Idaho</span>
+                    </div>
+                    <ul class="responsibility-list">
+                        <li>Maintained storage facilities and grounds</li>
+                        <li>Coordinated with team members on daily maintenance tasks</li>
+                        <li>Managed customer accounts and payments</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Education Section -->
+            <div class="resume-section">
+                <h2><i class="fas fa-graduation-cap"></i> Education</h2>
+                <div class="resume-item">
+                    <div class="education-header">
+                        <h3>Bachelor's Degree - Games, Interactive Media and Mobile Technology</h3>
+                        <span class="school">Boise State University</span>
+                        <span class="duration">Expected May 2025</span>
+                    </div>
+                    <ul class="achievement-list">
+                        <li>Current GPA: 3.7</li>
+                        <li>Focus on game development and interactive media</li>
+                        <li>Relevant coursework in Unity, C#, and web development</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Skills Section -->
+            <div class="resume-section">
+                <h2><i class="fas fa-tools"></i> Technical Skills</h2>
+                <div class="skills-grid">
+                    <div class="skill-category">
+                        <h3>Game Development</h3>
+                        <ul class="skills-list">
+                            <li>Unity</li>
+                            <li>C#</li>
+                            <li>Game Design</li>
+                            <li>Level Design</li>
+                        </ul>
+                    </div>
+                    <div class="skill-category">
+                        <h3>Web Development</h3>
+                        <ul class="skills-list">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>Responsive Design</li>
+                        </ul>
+                    </div>
+                    <div class="skill-category">
+                        <h3>Design Tools</h3>
+                        <ul class="skills-list">
+                            <li>Maya</li>
+                            <li>Photoshop</li>
+                            <li>Premier Pro</li>
+                            <li>3D Modeling</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/in/jack-shanafelt-772125276/" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="mailto:shanafeltj1@gmail.com">
+                            <i class="fas fa-envelope"></i>
+                        </a>
+                    </div>
+                    <p>&copy; 2024 Jack Shanafelt. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
+</body>
 </html>
