--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="index.html#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="resume.html">Resume</a>  <!-- Changed to lowercase -->
+                        <a class="nav-link" href="Resume.html">Resume</a>  <!-- Changed to lowercase -->
                     </li>
                 </ul>
             </div>
